--- a/model_1.ipynb
+++ b/model_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOk+K0ycSC2xhVHjBzl1sGQ",
+      "authorship_tag": "ABX9TyOKCR8ONgUr4H4YvYIQxKeN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
         "import torch.nn as nn\n",
         "from google.colab import files, drive\n",
         "import pandas as pd\n",
+        "import random\n",
         "drive.mount('/content/drive')"
       ],
       "metadata": {
@@ -42,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGDO3rSDSvXP",
-        "outputId": "a1e39f8c-1586-4c23-a24a-38a3943edb19"
+        "outputId": "a3324e72-8328-4a54-cdc1-f49bb0db34a6"
       },
       "execution_count": 1,
       "outputs": [
@@ -93,43 +94,30 @@
         "    if crisis_number in crisis_details:\n",
         "        crisis_details[crisis_number]['actors'].add(actor)\n",
         "\n",
-        "print(crisis_details[27])"
+        "print(crisis_details[87])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "H_aRFImRUzrk",
-        "outputId": "242710d8-5209-4355-dff7-a8ba8b735906"
+        "outputId": "9da03b01-a89e-4801-f1fa-0f1192746762"
       },
-      "execution_count": 51,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'crisis_name': 'RUHR I', 'start_year': 1923, 'end_year': 1923.0, 'actors': {'Poland', 'Germany (Prussia)', 'Netherlands'}}\n"
+            "{'crisis_name': 'OCCUPATION OF IRAN', 'start_year': 1941, 'end_year': 1942.0, 'actors': {'Iran'}}\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "idx = np.where(country_codes == 'AAB')[0]\n",
-        "a = country_codes.iloc[idx[0],0]\n"
-      ],
-      "metadata": {
-        "id": "-si5e4rBelNB"
-      },
-      "execution_count": 45,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "### Make matrix for years (i) and actors (j), for if a conflict has been started"
+        "### Make matrix for conflicts (i) and actors (j), for if a conflict has been started"
       ],
       "metadata": {
         "id": "trkjG0Tube8K"
@@ -159,35 +147,43 @@
         "\n",
         "actor_crisis_matrix = actor_crisis_matrix[columns] # Row per conflict\n",
         "combined_actor_crisis_matrix = actor_crisis_matrix.groupby('Year').sum().reset_index() # Row per year\n",
+        "actor_crisis_matrix = actor_crisis_matrix[actor_crisis_matrix['Year'] >= 1950]\n",
         "\n",
-        "print(combined_actor_crisis_matrix.head())"
+        "print(actor_crisis_matrix.head())"
       ],
       "metadata": {
         "id": "EjGxNeYIbYOu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5677650c-b75f-45c0-86ca-b02b36c58628"
+        "outputId": "4cb8f793-9f40-4313-d2c4-35362980e9ad"
       },
-      "execution_count": 3,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   Year  IND  AZE  SEN  CAN  HIJ  HUN  IRQ  TUN  SLV  ...  DRV  TAZ  NTH  ZIM  \\\n",
-            "0  1918    0    0    0    0    0    0    0    0    0  ...    0    0    0    0   \n",
-            "1  1919    0    0    0    0    0    1    0    0    0  ...    0    0    0    0   \n",
-            "2  1920    0    0    0    0    0    0    0    0    0  ...    0    0    0    0   \n",
-            "3  1921    0    0    0    0    0    2    0    0    0  ...    0    0    1    0   \n",
-            "4  1922    0    0    0    0    0    0    0    0    0  ...    0    0    0    0   \n",
+            "     Year  Peru  Australia  Benin  Paraguay  Papua New Guinea  Cameroon  \\\n",
+            "131  1950     0          0      0         0                 0         0   \n",
+            "132  1950     0          0      0         0                 0         0   \n",
+            "133  1951     0          0      0         0                 0         0   \n",
+            "134  1951     0          0      0         0                 0         0   \n",
+            "135  1951     0          0      0         0                 0         0   \n",
             "\n",
-            "   BAH  DEN  TOG  CAM  LIT  VFR  \n",
-            "0    0    0    0    0    1    0  \n",
-            "1    0    0    0    0    0    0  \n",
-            "2    0    0    0    0    1    0  \n",
-            "3    0    0    0    0    0    0  \n",
-            "4    0    0    0    0    0    0  \n",
+            "     South Vietnam  Nigeria  Turkey  ...  Algeria  Malawi  Serbia  Bangladesh  \\\n",
+            "131              0        0       0  ...        0       0       0           0   \n",
+            "132              0        0       0  ...        0       0       0           0   \n",
+            "133              0        0       0  ...        0       0       0           0   \n",
+            "134              0        0       0  ...        0       0       0           0   \n",
+            "135              0        0       0  ...        0       0       0           0   \n",
+            "\n",
+            "     Nicaragua  Jordan  Ethiopia  Djibouti  Guinea  India  \n",
+            "131          0       0         0         0       0      0  \n",
+            "132          0       0         0         0       0      0  \n",
+            "133          0       0         0         0       0      0  \n",
+            "134          0       0         0         0       0      1  \n",
+            "135          0       0         0         0       0      0  \n",
             "\n",
             "[5 rows x 146 columns]\n"
           ]
@@ -206,86 +202,124 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "df = pd.read_csv('/content/drive/My Drive/Data_sci/all_alphabetical_by_recipient.csv')\n",
         "\n",
-        "# Perform one-hot encoding for categorical variables\n",
         "categorical_cols = ['Recipient', 'Supplier', 'Weapon designation']\n",
         "encoder = OneHotEncoder(handle_unknown='ignore')\n",
         "encoded_data = encoder.fit_transform(df[categorical_cols])\n",
         "\n",
-        "# Normalize numeric variables\n",
         "numeric_cols = ['Year of order', 'Number ordered', 'SIPRI TIV per unit', 'SIPRI TIV for total order', 'SIPRI TIV of delivered weapons']\n",
         "scaler = StandardScaler()\n",
         "scaled_data = scaler.fit_transform(df[numeric_cols])\n",
         "\n",
-        "# Concatenate encoded categorical data and scaled numeric data\n",
-        "input_data = np.concatenate((encoded_data.toarray(), scaled_data), axis=1)\n",
         "\n",
-        "# Define sequence length\n",
-        "sequence_length = 5\n",
+        "def extract_arms_trade_data(recipient, target_year):\n",
+        "    data = df[(df['Recipient'] == recipient) & (df['Year of order'] >= target_year - 3) & (df['Year of order'] < target_year)]\n",
+        "    if data.empty:\n",
+        "      return None, None\n",
         "\n",
-        "# Create input sequences\n",
-        "sequences = []\n",
-        "targets = []\n",
+        "    encoded_data = encoder.transform(data[categorical_cols])\n",
+        "    scaled_data = scaler.transform(data[numeric_cols])\n",
         "\n",
-        "for i in range(len(input_data) - sequence_length):\n",
-        "    sequence = input_data[i:i+sequence_length]\n",
-        "    target = 1 # Did a conflict occur this year (1 or 0)\n",
-        "    sequences.append(sequence)\n",
-        "    targets.append(target)\n",
+        "    input_data = np.concatenate((encoded_data.toarray(), scaled_data), axis=1)\n",
         "\n",
-        "X = torch.tensor(sequences, dtype=torch.float32)\n",
-        "y = torch.tensor(targets, dtype=torch.float32)\n"
+        "    year_rows = actor_crisis_matrix[actor_crisis_matrix['Year'] == target_year]\n",
+        "    if year_rows[recipient].sum() == 0:\n",
+        "        target = 0\n",
+        "    else:\n",
+        "        target = 1\n",
+        "\n",
+        "    return input_data, target\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "2TXVjQQWRkXD",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "28ec552a-2015-4665-f4c6-ce9c35fa9bb5"
+        "id": "KZl8nPs-8Ynd",
+        "outputId": "ae769b39-fb35-4a2f-8837-e91e53610a91"
       },
       "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-4-e0cfc2c71c16>:29: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ../torch/csrc/utils/tensor_new.cpp:275.)\n",
-            "  X = torch.tensor(sequences, dtype=torch.float32)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(X.shape)\n",
-        "print(y.shape)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UyJHKMJMbZU0",
-        "outputId": "6d2289b2-a2ce-4db9-88e3-4d4e1242cb56"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([29053, 5, 4481])\n",
-            "torch.Size([29053])\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[ 0.        ,  1.        ,  0.        , ..., -0.25502206,\n",
+              "         -0.27955698, -0.27606523],\n",
+              "        [ 0.        ,  1.        ,  0.        , ..., -0.16847345,\n",
+              "         -0.24720897, -0.24119009],\n",
+              "        [ 0.        ,  1.        ,  0.        , ..., -0.26800436,\n",
+              "         -0.27820288, -0.27460534],\n",
+              "        [ 0.        ,  1.        ,  0.        , ..., -0.27124993,\n",
+              "         -0.13436705, -0.11953263],\n",
+              "        [ 0.        ,  1.        ,  0.        , ..., -0.26944683,\n",
+              "         -0.2201269 , -0.2119923 ]]),\n",
+              " 0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Define the RNN"
+        "### Generate random samples of data for RNN"
+      ],
+      "metadata": {
+        "id": "iAMOIBo1GN1R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def generate_random_samples(actor_matrix, n, ratio):\n",
+        "    random_samples = []\n",
+        "\n",
+        "    num_ones = int(n * ratio)\n",
+        "    num_zeros = n - num_ones\n",
+        "\n",
+        "    one_indices = actor_matrix[actor_matrix == 1].stack().index.tolist()\n",
+        "    zero_indices = actor_matrix[actor_matrix == 0].stack().index.tolist()\n",
+        "\n",
+        "    sampled_one_indices = random.sample(one_indices, num_ones)\n",
+        "    sampled_zero_indices = random.sample(zero_indices, num_zeros)\n",
+        "    sampled_indices = sampled_one_indices + sampled_zero_indices\n",
+        "    random.shuffle(sampled_indices)\n",
+        "\n",
+        "    for idx, country in sampled_indices:\n",
+        "        year = actor_matrix.loc[idx, 'Year']\n",
+        "        input_data, target = extract_arms_trade_data(country, year)\n",
+        "\n",
+        "        if input_data is not None and target is not None:\n",
+        "            input_data = torch.tensor(input_data, dtype=torch.float32)\n",
+        "            target = torch.tensor(target, dtype=torch.float32)\n",
+        "\n",
+        "            if not torch.isnan(input_data).any() and not torch.isnan(target):\n",
+        "                X_rnn = input_data\n",
+        "                y_rnn = target\n",
+        "\n",
+        "                random_samples.append((X_rnn, y_rnn, country, year))\n",
+        "\n",
+        "    return random_samples\n",
+        "\n",
+        "n = 1000\n",
+        "ratio = 0.5  # share of data that is 1s\n",
+        "random_samples = generate_random_samples(actor_crisis_matrix, n, ratio)\n"
+      ],
+      "metadata": {
+        "id": "aomfBMS1PA7C"
+      },
+      "execution_count": 139,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Define the RNN model"
       ],
       "metadata": {
         "id": "JxBcZCtgcBXC"
@@ -293,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 145,
       "metadata": {
         "id": "gkJnQpvBQvbu"
       },
@@ -315,7 +349,7 @@
         "        out = self.sigmoid(out)\n",
         "        return out\n",
         "\n",
-        "input_size = X.shape[2]\n",
+        "input_size = random_samples[0][0].shape[1]\n",
         "output_size = 1\n",
         "hidden_size = 64\n",
         "num_layers = 1\n",
@@ -329,7 +363,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Training"
+        "### Training, validation, and testing\n"
       ],
       "metadata": {
         "id": "F9-S4hygcErj"
@@ -338,23 +372,106 @@
     {
       "cell_type": "code",
       "source": [
-        "num_epochs = 10\n",
+        "num_epochs = 20\n",
+        "train_size = int(0.8 * len(random_samples))\n",
+        "val_size = int(0.1 * len(random_samples))\n",
+        "test_size = len(random_samples) - train_size - val_size\n",
+        "\n",
+        "train_set, val_set, test_set = random_samples[:train_size], random_samples[train_size:train_size + val_size], random_samples[-test_size:]\n",
+        "\n",
+        "# Training loop\n",
         "for epoch in range(num_epochs):\n",
+        "    model.train()  # Set model to training mode\n",
+        "    running_loss = 0.0\n",
+        "    correct_predictions = 0\n",
+        "    total_samples = 0\n",
         "\n",
-        "    outputs = model(X)\n",
-        "    loss = criterion(outputs.squeeze(), y)\n",
+        "    for X_rnn, y_rnn, _, _ in train_set:\n",
+        "        optimizer.zero_grad()\n",
+        "        X_rnn = X_rnn.unsqueeze(0)\n",
+        "        outputs = model(X_rnn)\n",
+        "        predictions = (outputs.squeeze() > 0.5).float()\n",
+        "        loss = criterion(outputs.squeeze(), y_rnn)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
         "\n",
-        "    optimizer.zero_grad()\n",
-        "    loss.backward()\n",
-        "    optimizer.step()\n",
+        "        running_loss += loss.item()\n",
+        "        correct_predictions += (predictions == y_rnn).sum().item()\n",
+        "        total_samples += 1\n",
         "\n",
-        "    print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}')"
+        "    # Validation\n",
+        "    model.eval()  # Set model to evaluation mode\n",
+        "    val_loss = 0.0\n",
+        "    val_correct_predictions = 0\n",
+        "    val_total_samples = 0\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        for X_val, y_val, _, _ in val_set:\n",
+        "            X_val = X_val.unsqueeze(0)\n",
+        "            outputs_val = model(X_val)\n",
+        "            predictions_val = (outputs_val.squeeze() > 0.5).float()\n",
+        "            val_loss += criterion(outputs_val.squeeze(), y_val).item()\n",
+        "            val_correct_predictions += (predictions_val == y_val).sum().item()\n",
+        "            val_total_samples += 1\n",
+        "\n",
+        "    epoch_loss = running_loss / len(train_set)\n",
+        "    val_accuracy = val_correct_predictions / val_total_samples\n",
+        "\n",
+        "    print(f'Epoch [{epoch+1}/{num_epochs}], Training Loss: {epoch_loss:.4f}, Validation Accuracy: {val_accuracy:.4f}')\n",
+        "\n",
+        "# Testing\n",
+        "model.eval()  # Set model to evaluation mode\n",
+        "test_correct_predictions = 0\n",
+        "test_total_samples = 0\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "    for X_test, y_test, _, _ in test_set:\n",
+        "        X_test = X_test.unsqueeze(0)\n",
+        "        outputs_test = model(X_test)\n",
+        "        predictions_test = (outputs_test.squeeze() > 0.5).float()\n",
+        "        test_correct_predictions += (predictions_test == y_test).sum().item()\n",
+        "        test_total_samples += 1\n",
+        "\n",
+        "test_accuracy = test_correct_predictions / test_total_samples\n",
+        "print(f'Testing Accuracy: {test_accuracy:.4f}')"
       ],
       "metadata": {
-        "id": "i5d_pcVJTxLy"
+        "id": "i5d_pcVJTxLy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "90ef9718-7848-4f39-d73a-ffa182d97ebf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [1/20], Training Loss: 0.6780, Validation Accuracy: 0.6000\n",
+            "Epoch [2/20], Training Loss: 0.5106, Validation Accuracy: 0.6143\n",
+            "Epoch [3/20], Training Loss: 0.2869, Validation Accuracy: 0.5571\n",
+            "Epoch [4/20], Training Loss: 0.1410, Validation Accuracy: 0.6286\n",
+            "Epoch [5/20], Training Loss: 0.0869, Validation Accuracy: 0.5714\n",
+            "Epoch [6/20], Training Loss: 0.0484, Validation Accuracy: 0.6429\n",
+            "Epoch [7/20], Training Loss: 0.0507, Validation Accuracy: 0.6143\n",
+            "Epoch [8/20], Training Loss: 0.0319, Validation Accuracy: 0.6429\n",
+            "Epoch [9/20], Training Loss: 0.0283, Validation Accuracy: 0.6143\n",
+            "Epoch [10/20], Training Loss: 0.0257, Validation Accuracy: 0.6429\n",
+            "Epoch [11/20], Training Loss: 0.0241, Validation Accuracy: 0.6286\n",
+            "Epoch [12/20], Training Loss: 0.0229, Validation Accuracy: 0.6429\n",
+            "Epoch [13/20], Training Loss: 0.0222, Validation Accuracy: 0.6714\n",
+            "Epoch [14/20], Training Loss: 0.0211, Validation Accuracy: 0.6143\n",
+            "Epoch [15/20], Training Loss: 0.0196, Validation Accuracy: 0.6571\n",
+            "Epoch [16/20], Training Loss: 0.0182, Validation Accuracy: 0.6714\n",
+            "Epoch [17/20], Training Loss: 0.0172, Validation Accuracy: 0.6714\n",
+            "Epoch [18/20], Training Loss: 0.0162, Validation Accuracy: 0.6429\n",
+            "Epoch [19/20], Training Loss: 0.0156, Validation Accuracy: 0.6571\n",
+            "Epoch [20/20], Training Loss: 0.0158, Validation Accuracy: 0.6714\n",
+            "Testing Accuracy: 0.6111\n"
+          ]
+        }
+      ]
     }
   ]
 }
