--- a/model_2.ipynb
+++ b/model_2.ipynb
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 39,
       "metadata": {
         "id": "aomfBMS1PA7C"
       },
@@ -270,8 +270,8 @@
         "\n",
         "    return random_samples\n",
         "\n",
-        "n = 1000\n",
-        "ratio = 0.5  # share of data that is 1s\n",
+        "n = 2000\n",
+        "ratio = 0.1  # share of data that is 1s\n",
         "random_samples = generate_random_samples(actor_crisis_matrix, n, ratio)\n"
       ]
     },
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 40,
       "metadata": {
         "id": "gkJnQpvBQvbu"
       },
@@ -310,8 +310,8 @@
         "\n",
         "input_size = random_samples[0][0].shape[1]\n",
         "output_size = 1\n",
-        "hidden_size = 64\n",
-        "num_layers = 4\n",
+        "hidden_size = 128\n",
+        "num_layers = 3\n",
         "\n",
         "model = RNNModel(input_size, hidden_size, output_size, num_layers)\n",
         "\n",
@@ -330,45 +330,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "i5d_pcVJTxLy",
-        "outputId": "cb2e0ea2-f687-4cf3-fc6b-4a043b170c35"
+        "outputId": "1c9c77a5-cdef-4b43-879d-9d33346d61d7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch [1/20], Training Loss: 0.6955, Validation Accuracy: 0.6712\n",
-            "Epoch [2/20], Training Loss: 0.5804, Validation Accuracy: 0.6027\n",
-            "Epoch [3/20], Training Loss: 0.4224, Validation Accuracy: 0.6438\n",
-            "Epoch [4/20], Training Loss: 0.2997, Validation Accuracy: 0.6164\n",
-            "Epoch [5/20], Training Loss: 0.2697, Validation Accuracy: 0.4795\n",
-            "Epoch [6/20], Training Loss: 0.1113, Validation Accuracy: 0.5890\n",
-            "Epoch [7/20], Training Loss: 0.3256, Validation Accuracy: 0.4521\n",
-            "Epoch [8/20], Training Loss: 0.4809, Validation Accuracy: 0.5890\n",
-            "Epoch [9/20], Training Loss: 0.1013, Validation Accuracy: 0.6027\n",
-            "Epoch [10/20], Training Loss: 0.1086, Validation Accuracy: 0.6712\n",
-            "Epoch [11/20], Training Loss: 0.1220, Validation Accuracy: 0.6164\n",
-            "Epoch [12/20], Training Loss: 0.0440, Validation Accuracy: 0.5890\n",
-            "Epoch [13/20], Training Loss: 0.0243, Validation Accuracy: 0.6712\n",
-            "Epoch [14/20], Training Loss: 0.0132, Validation Accuracy: 0.6575\n",
-            "Epoch [15/20], Training Loss: 0.0108, Validation Accuracy: 0.6575\n",
-            "Epoch [16/20], Training Loss: 0.0101, Validation Accuracy: 0.6575\n",
-            "Epoch [17/20], Training Loss: 0.0096, Validation Accuracy: 0.6712\n",
-            "Epoch [18/20], Training Loss: 0.0092, Validation Accuracy: 0.6712\n",
-            "Epoch [19/20], Training Loss: 0.0091, Validation Accuracy: 0.6712\n",
-            "Epoch [20/20], Training Loss: 0.0089, Validation Accuracy: 0.6712\n",
-            "Testing Accuracy: 0.6000\n"
+            "Epoch [1/10], Training Loss: 0.5166, Validation Accuracy: 0.8222\n",
+            "Epoch [2/10], Training Loss: 0.4890, Validation Accuracy: 0.7926\n",
+            "Epoch [3/10], Training Loss: 0.4480, Validation Accuracy: 0.7481\n",
+            "Epoch [4/10], Training Loss: 0.4147, Validation Accuracy: 0.6519\n"
           ]
         }
       ],
       "source": [
-        "num_epochs = 20\n",
+        "num_epochs = 10\n",
         "train_size = int(0.8 * len(random_samples))\n",
         "val_size = int(0.1 * len(random_samples))\n",
         "test_size = len(random_samples) - train_size - val_size\n",
@@ -436,7 +419,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuZ/WH0YtzRI3gvLRdsKBx",
+      "authorship_tag": "ABX9TyOdqHbhFFRivOJXL5wuhYGM",
       "include_colab_link": true
     },
     "kernelspec": {
