--- a/model/data_processing.ipynb
+++ b/model/data_processing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPT4kN5OKOj4vE51vkWB0pn",
+      "authorship_tag": "ABX9TyM0TS6drzvciy64qgezz2UM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,10 +51,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "3tqS3sKsdSH9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3tqS3sKsdSH9",
+        "outputId": "2a347c11-6aca-4d66-ec41-7bb204dac627"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -67,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "B5dCLG9NdOjt"
       },
@@ -96,6 +108,91 @@
         "    if crisis_number in crisis_details:\n",
         "        crisis_details[crisis_number]['actors'].add(actor)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Make matrix for conflicts (i) and actors (j), for if a conflict has been started"
+      ],
+      "metadata": {
+        "id": "1_92qEBNeFIH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "actors = set()\n",
+        "for _, details in crisis_details.items():\n",
+        "    actors.update(details['actors'])\n",
+        "\n",
+        "matrix_data = []\n",
+        "for _, details in crisis_details.items():\n",
+        "    crisis_year = details['start_year']\n",
+        "    crisis_actors = details['actors']\n",
+        "    row_data = {'Year': crisis_year}\n",
+        "    for actor in actors:\n",
+        "        row_data[actor] = 1 if actor in crisis_actors else 0\n",
+        "    matrix_data.append(row_data)\n",
+        "\n",
+        "actor_crisis_matrix = pd.DataFrame(matrix_data)\n",
+        "\n",
+        "columns = actor_crisis_matrix.columns.tolist()\n",
+        "columns.remove('Year')\n",
+        "columns = ['Year'] + columns\n",
+        "\n",
+        "actor_crisis_matrix = actor_crisis_matrix[columns]\n",
+        "actor_crisis_matrix = actor_crisis_matrix[actor_crisis_matrix['Year'] >= 1950]\n"
+      ],
+      "metadata": {
+        "id": "NcenPbfGeEbn"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Processing arms trade data"
+      ],
+      "metadata": {
+        "id": "bBHXIyAMeWy7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv('/content/drive/My Drive/Data_sci/all_alphabetical_by_recipient.csv')\n",
+        "country_codes = pd.read_csv('/content/drive/My Drive/Data_sci/country_codes_15-04.csv')\n",
+        "\n",
+        "name_to_code = dict(zip(country_codes['country names'], country_codes['country codes']))\n",
+        "df['Recipient'] = df['Recipient'].map(name_to_code)\n"
+      ],
+      "metadata": {
+        "id": "N8RB7GPMeTvh"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Save needed data"
+      ],
+      "metadata": {
+        "id": "KQS9MqPVkPO1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.save('/content/drive/My Drive/Data_sci/df.npy',df)\n",
+        "np.save('/content/drive/My Drive/Data_sci/matrix.npy',actor_crisis_matrix)"
+      ],
+      "metadata": {
+        "id": "ZwP1ST2zkOGx"
+      },
+      "execution_count": 22,
+      "outputs": []
     }
   ]
 }
